use scss partials

--- a/src/assets/css/bootstrap.scss
+++ b/src/assets/css/bootstrap.scss
@@ -1,11 +1,6 @@
+// bootstrap.scss
 
 @import "../../../node_modules/bootstrap/scss/functions";
-
-// Colours
-$body-bg: #fafafa;
-$bg-gray-1: #f4f4f4;
-$bg-gray-2: #aaaaaa;
-$bg-gray-3: #5a5a5a;
 
 // Enable Bootstrap CSS Grid, disable default flexbox grid
 $enable-grid-classes: false;
@@ -28,101 +23,3 @@ $enable-cssgrid: true;
 @import "../../../node_modules/bootstrap/scss/helpers";
 
 @import "../../../node_modules/bootstrap/scss/utilities/api";
-
-/* Regular */
-@font-face {
-  font-family: "Noto Sans";
-  src: url("../fonts/NotoSans-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-/* Italic */
-@font-face {
-  font-family: "Noto Sans";
-  src: url("../fonts/NotoSans-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-}
-
-/* Bold */
-@font-face {
-  font-family: "Noto Sans";
-  src: url("../fonts/NotoSans-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-/* Bold Italic */
-@font-face {
-  font-family: "Noto Sans";
-  src: url("../fonts/NotoSans-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
-}
-
-body {
-  font-family:
-    "Noto Sans";
-  margin: 0;
-  height: calc(100vh - 25px);
-  box-sizing: border-box;
-}
-
-.sidebar {
-  position: fixed;
-  width: 60px;
-  left: 0;
-  top: 0;
-  height: calc(100vh - 26px);
-  z-index: 100;
-  background-color: $bg-gray-1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px 0;
-  gap: 20px;
-}
-
-.sidebar .nav-item:last-child {
-  margin-top: auto;
-}
-
-.main-wrapper {
-  margin-left: 60px;
-  height: calc(100vh - 25px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  background: $bg-gray-1;
-  border-radius: 16px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-  width: min(95%);
-  height: min(95%, calc(100vh - 25px));
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-}
-
-.statusbar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 26px;
-  z-index: 100;
-  background-color: $bg-gray-2;
-}
-
-i.fas {
-  color: $bg-gray-2;
-  font-size: 24px;
-}
-
-i.fas.tab {
-  color: $bg-gray-3
-}
