--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -75,8 +75,8 @@
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
   --bs-body-color-rgb: 33, 37, 41;
-  --bs-body-bg: #fafafa;
-  --bs-body-bg-rgb: 250, 250, 250;
+  --bs-body-bg: #fff;
+  --bs-body-bg-rgb: 255, 255, 255;
   --bs-emphasis-color: #000;
   --bs-emphasis-color-rgb: 0, 0, 0;
   --bs-secondary-color: rgba(33, 37, 41, 0.75);
@@ -6408,4 +6408,4 @@ i.fas.tab {
   color: #5a5a5a;
 }
 
-/*# sourceMappingURL=bootstrap.css.map */
+/*# sourceMappingURL=main.css.map */
