--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -4,3 +4,7 @@ $body-bg: #fafafa;
 $bg-gray-1: #f4f4f4;
 $bg-gray-2: #aaaaaa;
 $bg-gray-3: #5a5a5a;
+
+// Typeface
+
+$font-sans-serif: "Noto Sans";
