--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -48,21 +48,42 @@ body {
   overflow: auto;
 }
 
+.corner {
+  position: fixed;
+  bottom: 0;
+  width: 60px;
+  height: 26px;
+  z-index: 100;
+  background-color: variables.$bg-gray-3;
+}
+
 .statusbar {
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100%;
+  left: 60px;
+  width: calc(100vw - 60px);
   height: 26px;
+  padding-left: 10px;
+  line-height: 26px;
   z-index: 100;
   background-color: variables.$bg-gray-2;
 }
 
-i.fas {
+.statusbar i {
+  vertical-align: middle;
+  line-height: 1;
+}
+
+
+.sidebar i.fas {
   color: variables.$bg-gray-2;
   font-size: 24px;
 }
 
-i.fas.tab {
+.sidebar i.fas.tab {
   color: variables.$bg-gray-3
+}
+
+#lexadb-path {
+  font-size: 0.7rem;
 }
