--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6389,23 +6389,43 @@ body {
   overflow: auto;
 }
 
+.corner {
+  position: fixed;
+  bottom: 0;
+  width: 60px;
+  height: 26px;
+  z-index: 100;
+  background-color: #5a5a5a;
+}
+
 .statusbar {
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100%;
+  left: 60px;
+  width: calc(100vw - 60px);
   height: 26px;
+  padding-left: 10px;
+  line-height: 26px;
   z-index: 100;
   background-color: #aaaaaa;
 }
 
-i.fas {
+.statusbar i {
+  vertical-align: middle;
+  line-height: 1;
+}
+
+.sidebar i.fas {
   color: #aaaaaa;
   font-size: 24px;
 }
 
-i.fas.tab {
+.sidebar i.fas.tab {
   color: #5a5a5a;
+}
+
+#lexadb-path {
+  font-size: 0.7rem;
 }
 
 /*# sourceMappingURL=main.css.map */
