--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -69,12 +69,6 @@ body {
   background-color: variables.$bg-gray-2;
 }
 
-.statusbar i {
-  vertical-align: middle;
-  line-height: 1;
-}
-
-
 .sidebar i.fas {
   color: variables.$bg-gray-2;
   font-size: 24px;
@@ -82,6 +76,14 @@ body {
 
 .sidebar i.fas.tab {
   color: variables.$bg-gray-3
+}
+
+.statusbar i.valid {
+  color: green;
+}
+
+.statusbar i.invalid {
+  color: red;
 }
 
 #lexadb-path {
