--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6410,11 +6410,6 @@ body {
   background-color: #aaaaaa;
 }
 
-.statusbar i {
-  vertical-align: middle;
-  line-height: 1;
-}
-
 .sidebar i.fas {
   color: #aaaaaa;
   font-size: 24px;
@@ -6422,6 +6417,14 @@ body {
 
 .sidebar i.fas.tab {
   color: #5a5a5a;
+}
+
+.statusbar i.valid {
+  color: green;
+}
+
+.statusbar i.invalid {
+  color: red;
 }
 
 #lexadb-path {
