--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -9,6 +9,7 @@ body {
   box-sizing: border-box;
 }
 
+/* Sidebar */
 .sidebar {
   position: fixed;
   width: 60px;
@@ -22,12 +23,23 @@ body {
   align-items: center;
   padding: 20px 0;
   gap: 20px;
+  font-size: 24px;
+
+  &__nav-item {
+    &:last-child {
+      margin-top: auto;
+    }
+  }
+
+  &__icon {
+    &--active {
+      color: variables.$bg-gray-3;
+    }
+    color: variables.$bg-gray-2;
+  }
 }
 
-.sidebar .nav-item:last-child {
-  margin-top: auto;
-}
-
+/* Main wrapper */
 .main-wrapper {
   margin-left: 60px;
   height: calc(100vh - 25px);
@@ -48,6 +60,7 @@ body {
   overflow: auto;
 }
 
+/* Corner */
 .corner {
   position: fixed;
   bottom: 0;
@@ -57,6 +70,7 @@ body {
   background-color: variables.$bg-gray-3;
 }
 
+/* Statusbar */
 .statusbar {
   position: fixed;
   bottom: 0;
@@ -67,25 +81,17 @@ body {
   line-height: 26px;
   z-index: 100;
   background-color: variables.$bg-gray-2;
-}
 
-.sidebar i.fas {
-  color: variables.$bg-gray-2;
-  font-size: 24px;
-}
+  &__icon {
+    &--valid {
+      color: green;
+    }
+    &--invalid {
+      color: red;
+    }
+  }
 
-.sidebar i.fas.tab {
-  color: variables.$bg-gray-3
-}
-
-.statusbar i.valid {
-  color: green;
-}
-
-.statusbar i.invalid {
-  color: red;
-}
-
-#lexadb-path {
-  font-size: 0.7rem;
+  &__dbpath {
+    font-size: 0.8rem;
+  }
 }
