--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -4,6 +4,7 @@
 
 body {
   box-sizing: border-box;
+  color: variables.$bg-gray-4;
   font-family: variables.$font-sans-serif;
   height: calc(100vh - 25px);
   margin: 0;
@@ -57,8 +58,23 @@ body {
   flex-direction: column;
   height: min(95%, calc(100vh - 25px));
   overflow: auto;
-  padding: 2rem;
+  padding-top: 2rem;
   width: min(95%);
+
+  &__titlebar {
+    background-color: variables.$bg-gray-3;
+  }
+
+  &__h1 {
+    background-color: variables.$bg-gray-1;
+    display: inline-block;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-left: 60px;
+    margin-top: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 /* Corner */
