--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,8 @@
 // main.scss
 
+/* Copyright (C) 2025 Stefano
+Licensed under the GNU GPL v3. See LICENSE file for details. */
+
 @use 'bootstrap';
 @use 'fonts';
 @use 'custom';
