--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* Copyright (C) 2025 Stefano
+Licensed under the GNU GPL v3. See LICENSE file for details. */
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
