--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6317,32 +6317,41 @@ progress {
     display: none !important;
   }
 }
-/* Regular */
+/* Noto Sans */
 @font-face {
   font-family: "Noto Sans";
   src: url("../fonts/NotoSans-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
-/* Italic */
 @font-face {
   font-family: "Noto Sans";
   src: url("../fonts/NotoSans-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
-/* Bold */
 @font-face {
   font-family: "Noto Sans";
   src: url("../fonts/NotoSans-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
-/* Bold Italic */
 @font-face {
   font-family: "Noto Sans";
   src: url("../fonts/NotoSans-BoldItalic.ttf") format("truetype");
   font-weight: 700;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Josefin Sans";
+  src: url("../fonts/JosefinSans[wght].ttf") format("truetype-variations");
+  font-weight: 100 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Josefin Sans";
+  src: url("../fonts/JosefinSans-Italic[wght].ttf") format("truetype-variations");
+  font-weight: 100 700;
   font-style: italic;
 }
 body {
@@ -6404,7 +6413,9 @@ body {
 }
 .main__h1 {
   background-color: #f4f4f4;
+  color: #5a5a5a;
   display: inline-block;
+  font-family: "Josefin Sans";
   font-weight: 700;
   margin-bottom: 0;
   margin-left: 60px;
