--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -10,6 +10,11 @@ body {
   margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Josefin Sans";
+  font-weight: 700;
+}
+
 /* Sidebar */
 .sidebar {
   align-items: center;
@@ -41,16 +46,41 @@ body {
   }
 }
 
-/* Main wrapper */
-.main-wrapper {
-  align-items: center;
+// This is the main view inside the window, exclusive of sidebar and statusbar
+.main {
   display: flex;
+  flex-direction: column;
   height: calc(100vh - 25px);
-  justify-content: center;
   margin-left: 60px;
+  padding: 20px;
+  padding-bottom: 10px;
+
+    &__titlebar {
+    background-color: variables.$bg-gray-3;
+    flex: 0 0 auto;
+  }
+
+  &__h1 {
+    background-color: variables.$body-bg;
+    color: variables.$bg-gray-3;
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: 60px;
+    margin-top: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
-.main {
+.container-main {
+  align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  height: calc(100vh - 25px);
+  justify-content: center;
+}
+
+.sheet {
   background: variables.$bg-gray-1;
   border-radius: 16px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
@@ -58,25 +88,19 @@ body {
   flex-direction: column;
   height: min(95%, calc(100vh - 25px));
   overflow: auto;
-  padding-top: 2rem;
+  padding: 1rem;
   width: min(95%);
+}
 
-  &__titlebar {
-    background-color: variables.$bg-gray-3;
-  }
-
-  &__h1 {
-    background-color: variables.$bg-gray-1;
-    color: variables.$bg-gray-3;
-    display: inline-block;
-    font-family: "Josefin Sans";
-    font-weight: 700;
-    margin-bottom: 0;
-    margin-left: 60px;
-    margin-top: 0;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+.onsheet {
+  background: variables.$bg-gray-1;
+  border-radius: 16px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  padding: 1rem;
+  width: 100%;
 }
 
 /* Corner */
