add databse table

--- a/src/assets/css/_bootstrap.scss
+++ b/src/assets/css/_bootstrap.scss
@@ -23,5 +23,6 @@ $enable-cssgrid: true;
 @import "../../../node_modules/bootstrap/scss/containers";
 @import "../../../node_modules/bootstrap/scss/grid";
 @import "../../../node_modules/bootstrap/scss/helpers";
+@import "../../../node_modules/bootstrap/scss/badge";
 
 @import "../../../node_modules/bootstrap/scss/utilities/api";
