--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+table td:first-child {
+  width: 100px;
+}
+
 /* Sidebar */
 .sidebar {
   align-items: center;
@@ -96,8 +100,6 @@ h1, h2, h3, h4, h5, h6 {
   background: variables.$bg-gray-1;
   border-radius: 16px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
   overflow: auto;
   padding: 1rem;
   width: 100%;
@@ -138,4 +140,9 @@ h1, h2, h3, h4, h5, h6 {
   &__dbpath {
     font-size: 0.8rem;
   }
+}
+
+.text-bg-gray-3 {
+  color: variables.$bg-gray-1;
+  background-color: variables.$bg-gray-3;
 }
