--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -3,6 +3,6 @@
 /* Copyright (C) 2025 Stefano
 Licensed under the GNU GPL v3. See LICENSE file for details. */
 
-@use 'bootstrap';
+// @use 'bootstrap';
 @use 'fonts';
 @use 'custom';
